# placecell

./: .gitignore  Makefile  README.md  pyproject.toml  references.md
.github/workflows/: docs.yml  format.yml  test.yml
docs/: cli.md  conf.py  index.md  installation.md  modules.md  notebooks.md  pipeline.md  quickstart.md  spatial_analysis.md  visualization_workflow.md  workflows.md
examples/: batch_analysis.py
notebook/: batch_analysis.ipynb  plot_calcium_traces.ipynb  view_results_1d.ipynb  view_results_arena.ipynb  view_results_maze.ipynb  workflow_1D_maze.ipynb  workflow_2D.ipynb  workflow_2D_arena.ipynb
pcell/: __init__.py  analysis.py  config.py  curation.py  events.py  filters.py  main.py  visualization.py
pcell/cli/: __init__.py  analysis.py  behavior.py  curation.py  deconvolve.py  main.py  utils.py
pcell/cli/templates/: browse.html  browse_place.html  show.html
placecell/: __init__.py  analysis.py  analysis_1d.py  behavior.py  cli.py  config.py  dataset.py  dataset_validation.py  define_zones.py  event_overlay.py  events.py  filters.py  geometry.py  io.py  loaders.py  logging.py  maze.py  maze_dataset.py  maze_helper.py  neural.py  notebook.py  temporal_alignment.py  visualization.py  zone_detection.py
placecell/analysis/: __init__.py  pvo_1d.py  spatial_1d.py  spatial_2d.py
placecell/cli/: __init__.py  analysis.py  behavior.py  deconvolve.py  main.py
placecell/cli/templates/: browse_place.html
placecell/config/: example_arena_config.yaml  example_maze_config.yaml  example_pcell_config.yaml  example_zone_graph.yaml
placecell/dataset/: __init__.py  arena.py  base.py  behavior.py  maze.py
reference_notebooks/: WL25_oasis.ipynb
tests/: conftest.py  generate_regression_data_1d.py  generate_spatial_reference.py  test_analysis.py  test_analysis_1d.py  test_analysis_spatial_1d.py  test_analysis_spatial_2d.py  test_config.py  test_event_overlay.py  test_io.py  test_maze.py  test_pvo_1d.py  test_regression.py  test_regression_1d.py  test_regression_2d.py  test_zone_detection_geometry.py
tests/assets/: reference_event_index.csv  reference_event_place.csv  reference_spatial.npz  reference_spike_index.csv  test_config.yaml
tests/assets/behavior/: behavior_position.csv  behavior_timestamp.csv
tests/assets/neural_data/: neural_timestamp.csv
tests/assets/reference_deconv.zarr/: zarr.json
tests/assets/regression/: analysis_config.yaml  behavior_position.csv  behavior_timestamp.csv
tests/assets/regression_1d/: analysis_config.yaml  behavior_graph.yaml  behavior_position.csv  behavior_timestamp.csv  data_paths.yaml  (+2 more)
(+160 files in other folders)
